<resources>
    <string name="app_name">All Wishes GIF</string>
    <string name="go_to_cat">Daily Wishes</string>
    <string name="go_to_holidays">Holiday Wishes</string><string name="pp_url" translatable="false">https://s3.ap-south-1.amazonaws.com/greetingandwishes/privacypolicy.html</string>

    <string name="default_ad_config_string">{"Admob":0,"Fb":2,"Applovin":1,"Unity":3,"Inhouse":4}</string>
    <string name="ad_config_url">https://www.mediafire.com/file/9yzm6haw4mf9nvt/All_wishes%2528greetings_w.txt/file</string>
    <string name="enabledisable">https://www.mediafire.com/file_premium/uuihj1vmalklvm1/AllWishes%2528sbapp%2529_28-6-23/file</string>
    <string name="in_house_ads_url">https://www.mediafire.com/file/ksilhl63lvjhkkw/country_inhouse.json/file</string>
    <string name="smid">1008</string>

    <string name="openSaved">Show Saved items from</string>
    <string name="no_Saved">Nothing Saved Here!!</string>
    <string name="removeConfirm">You are about to Remove this item From Saved List ?</string>
    <string name="contentPreview">ContentPreview</string>
    <string name="share">Share</string>
    <string name="share_image">Share\nImage</string>
    <string name="add_text_btn_ttl">Add\nText</string>
    <string name="remove_text_btn_ttl">Remove\nText</string>
    <string name="remove_stickers_btn_ttl">Remove\nStickers</string>
    <string name="add_stickers_btn_ttl">Add\nStickers</string>
    <string name="choose_image">Select\nImage</string>
    <string name="download_image">Save\nImages</string>
    <string name="double_click_input_text">Double click to enter text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quotes">Quotes</string>
    <string name="images">Images</string>
    <string name="test_quote">Happy Thanksgiving to you and your family. May God keep blessing you and fulfill all your wishes and dreams.</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="good_morning">Good Morning</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_gradient">Choose Gradient</string>
    <string name="color">Color</string>
    <string name="choose_background">Choose Background</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_app_bar_open_drawer_description">open</string>
    <string name="add_bg">Add Bg</string>
    <string name="create">CREATE</string>
    <string name="add_text">Add Text</string>
    <string name="remove">Remove</string>
    <string name="remove_text">Remove Text</string>

    <string name="fonts">Fonts</string>
    <string name="text_color">Text Color</string>
    <string name="stickers">Stickers</string>
    <string name="add_bgtitle">Add background</string>
    <string name="text_Quotes">Quotes</string>
    <string name="myquotes">"Enter Text Here..."</string>
    <string name="ab">AB</string>
    <string name="choose_stic">Choose Stickers </string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!--admob ads ids -->
    <string name="fb_full_ads_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_entry_full_ads_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_native_ads_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_native_banner_ads_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_banner_ads_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_med_banner_ads_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>

    <!--    admob ads ids -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_full_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_entry_full_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_open_ad_id">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_native_advance_ad_id">ca-app-pub-3940256099942544/2247696110</string>

    <string name="unity_game_id"></string>
    <string name="unity_full_id">Android_Interstitial</string>
    <string name="unity_entry_full_id">Android_Interstitial</string>
    <string name="unity_banner_id">Banner_Android</string>

    <string name="apploving_key">efS0Gr7d1lJ6oJaJteqiDHuQngxhAJ-pRf_eAAx8ds2CwfMWtCwcgLENtVrdBffXdBlXe05buiLZeTIMTnaSz0ne</string>
    <string name="applovin_id_fullAd">sdgdfgdf</string>
    <string name="applovin_id_banner">dffhfhfg</string>
    <string name="applovin_id_rect">hfghfgh</string>
    <string name="applovin_native_id">ghfghfg</string>
    <string name="applovin_small_native_id">hfghfgh</string>

        <!--admob ads ids -->
<!--        <string name="admob_app_id">ca-app-pub-5218630348394030~8126157678</string>-->
<!--        <string name="admob_full_ad_id">ca-app-pub-5218630348394030/5308422643</string>-->
<!--        <string name="admob_entry_full_ad_id">ca-app-pub-5218630348394030/9400367439</string>-->
<!--        <string name="admob_open_ad_id">ca-app-pub-5218630348394030/1138734038</string>-->
<!--        <string name="admob_banner_ad_id">ca-app-pub-5218630348394030/5116850952</string>-->
<!--        <string name="admob_native_advance_ad_id">ca-app-pub-5218630348394030/2643387394</string>-->

<!--        &lt;!&ndash;    &lt;!&ndash; Unity ads ids &ndash;&gt;&ndash;&gt;-->
<!--        <string name="unity_game_id">4242923</string>-->
<!--        <string name="unity_full_id">Interstitial_Android</string>-->
<!--        <string name="unity_banner_id">Banner_Android</string>-->
<!--        <string name="unity_entry_full_id">Interstitial_Android</string>-->

<!--        &lt;!&ndash;    &lt;!&ndash;    &lt;!&ndash; fb ads ids &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
<!--        <string name="fb_full_ads_id">2315130605372706_2315134172039016</string>-->
<!--        <string name="fb_native_ads_id">2315130605372706_2315132005372566</string>-->
<!--        <string name="fb_native_banner_ads_id">2315130605372706_2315133675372399</string>-->
<!--        <string name="fb_entry_full_ads_id">2315130605372706_3200682006817557</string>-->
<!--        <string name="fb_banner_ads_id">2315130605372706_3070861506466275</string>-->
<!--        <string name="fb_med_banner_ads_id">2315130605372706_3110191949199897</string>-->

<!--        &lt;!&ndash;    <string name="ad_attribution">Ad</string>&ndash;&gt;-->


<!--        <string name="apploving_key">X79OrFcls94lRHOHwZxuDTTmxh9mTCyABWxzaGHEHeENLx5V01OlhxfdyKcBMfbseAed8Xsga1-Co5_CfC3RSa</string>-->
<!--        <string name="applovin_id_fullAd">60caee0586d493b3</string>-->
<!--        <string name="applovin_id_banner">cf3fcd97d26cf886</string>-->
<!--        <string name="applovin_id_rect">238518a4c8d90d1d</string>-->
<!--        <string name="applovin_native_id">1fa943dcc802ed55</string>-->
<!--        <string name="applovin_small_native_id">1083391c7a43f185</string>-->

</resources>