<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/choose_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_horizontal"
        android:text="@string/choose_background"
        android:textColor="#E7CDCD"
        android:textSize="@dimen/addbgdilogtitlesize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        app:cardBackgroundColor="#EAF3FA"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/recylayout"
        app:layout_constraintTop_toBottomOf="@+id/choose_bg"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addbglayoutid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/colorid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/color"
                android:textColor="@color/black"
                android:textSize="@dimen/addbgtextsize"
                app:drawableTopCompat="@drawable/colorbtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/galleryid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/galleryid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/addbgtextsize"
                app:drawableTopCompat="@drawable/gallerybtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cameraid"
                app:layout_constraintStart_toEndOf="@+id/colorid"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cameraid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="@dimen/addbgtextsize"
                app:drawableTopCompat="@drawable/camerabtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/galleryid"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/catname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/good_morning"
        android:textColor="@color/text_color"
        android:textSize="@dimen/addbgdilogtitlesize"
        app:layout_constraintBottom_toTopOf="@+id/recylayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recylayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_320sdp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="15dp"
        android:clipToPadding="false"
        android:elevation="2dp"
        android:outlineProvider="bounds"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <include
            android:id="@+id/bgprogressbarid"
            layout="@layout/progressbar_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addbgrecycleid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/bottomaddscbackid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="4" />

        <LinearLayout
            android:id="@+id/bottomaddscbackid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addbgrecycleid" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>