<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/galleryImageView"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                    <ImageView
                        android:id="@+id/cakeImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/loading_img" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/chooseImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableTop="@drawable/ic_new_image"
                        android:gravity="center"
                        android:text="@string/choose_image"
                        android:textAllCaps="true"
                        android:textColor="@color/text_col"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/btnShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableTop="@drawable/ic_share"
                        android:gravity="center"
                        android:text="@string/share"
                        android:textAllCaps="true"
                        android:textColor="@color/text_col"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/addText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableTop="@drawable/ic_new_text"
                        android:gravity="center"
                        android:text="@string/add_text_btn_ttl"
                        android:textAllCaps="true"
                        android:textColor="@color/text_col"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/addStickers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableTop="@drawable/ic_new_sticker"
                        android:gravity="center"
                        android:text="@string/add_stickers_btn_ttl"
                        android:textAllCaps="true"
                        android:textColor="@color/text_col"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableTop="@drawable/ic_new_download"
                        android:gravity="center"
                        android:text="@string/download_image"
                        android:textAllCaps="true"
                        android:textColor="@color/text_col"
                        android:textSize="10sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
